--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="Script.js"></script>
 </body>
+
 </html>
